Fix attaching documents on multi-traveler reservations

This was previously overwriting all subsequent reservations with the one
of the first traveler.

BUG: 469347
FIXED-IN: 23.04.2